--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BlankActivity"
     android:weightSum="1"
     android:orientation="vertical"
-    android:id="@+id/activity_main1" >
+    android:id="@+id/activity_main1"
+    android:scrollbars="horizontal">
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Linear Layout 測試"
-        android:id="@+id/btn_linear_start"/>
+        android:text="Linear Layout 測試(垂直)"
+        android:id="@+id/btn_linear_start"
+        android:onClick="showLinear"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Linear Layout 測試(水平)"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
