--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txt1"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:inputType="text"/>
 
     <Button
         android:layout_width="fill_parent"
@@ -30,6 +31,13 @@
         android:id="@+id/btn_notify"
         android:layout_gravity="center_horizontal"
         android:onClick="showNotify"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="測試寫入檔案"
+        android:id="@+id/btn_file_test"
+        android:layout_gravity="center_horizontal"/>
 
     <Button
         android:layout_width="fill_parent"
