--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/txt1"
         android:layout_gravity="center_horizontal"
-        android:inputType="text"/>
+        android:inputType="text"
+        android:hint="請輸入任意字串..."/>
 
     <Button
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Toast測試"
         android:id="@+id/btn_toast_show"
@@ -25,7 +26,7 @@
         android:layout_gravity="center_horizontal" />
 
     <Button
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="狀態列提示"
         android:id="@+id/btn_notify"
@@ -33,21 +34,21 @@
         android:onClick="showNotify"/>
 
     <Button
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="測試寫入檔案"
         android:id="@+id/btn_file_test"
         android:layout_gravity="center_horizontal"/>
 
     <Button
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Linear Layout 測試(垂直)"
         android:id="@+id/btn_linear_start"
         android:onClick="showLinear"/>
 
     <Button
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Linear Layout 測試(水平)"
         android:id="@+id/button"
