--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,70 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BlankActivity"
-    android:weightSum="1"
-    android:orientation="vertical"
-    android:id="@+id/activity_main1"
-    android:scrollbars="horizontal">
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent" >
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txt1"
-        android:layout_gravity="center_horizontal"
-        android:inputType="text"
-        android:hint="請輸入任意字串..."/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BlankActivity"
+        android:weightSum="1"
+        android:orientation="vertical"
+        android:id="@+id/activity_main1"
+        android:scrollbars="horizontal">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Toast測試"
-        android:id="@+id/btn_toast_show"
-        android:onClick="showToast"
-        android:layout_gravity="center_horizontal" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt1"
+            android:layout_gravity="center_horizontal"
+            android:inputType="text"
+            android:hint="請輸入任意字串..."/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="狀態列提示"
-        android:id="@+id/btn_notify"
-        android:layout_gravity="center_horizontal"
-        android:onClick="showNotify"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Toast測試"
+            android:id="@+id/btn_toast_show"
+            android:onClick="showToast"
+            android:layout_gravity="center_horizontal" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="測試寫入檔案"
-        android:id="@+id/btn_file_test"
-        android:layout_gravity="center_horizontal"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="狀態列提示"
+            android:id="@+id/btn_notify"
+            android:layout_gravity="center_horizontal"
+            android:onClick="showNotify"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Linear Layout 測試(垂直)"
-        android:id="@+id/btn_linear_start"
-        android:onClick="showLinear"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="測試寫入檔案"
+            android:id="@+id/btn_file_test"
+            android:layout_gravity="center_horizontal"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Linear Layout 測試(水平)"
-        android:id="@+id/button"
-        android:layout_gravity="center_horizontal" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Linear Layout 測試(垂直)"
+            android:id="@+id/btn_linear_start"
+            android:onClick="showLinear"/>
 
-</LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Linear Layout 測試(水平)"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:text="超大按鈕(測捲軸用)"
+            android:id="@+id/button2"
+            android:layout_gravity="center_horizontal"/>
+
+    </LinearLayout>
+
+</ScrollView>
