--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -6,7 +6,9 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.leo_kuo.android_test.TableActivity">
+                tools:context="com.leo_kuo.android_test.TableActivity"
+                android:orientation="vertical"
+                android:id="@+id/table_layout">
 
 
     <TableRow
