--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,8 +12,14 @@
         android:id="@+id/imgViewIcon" />
 
     <TextView
+        android:text="文字"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtViewIcon"
         android:layout_gravity="center_horizontal"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imgViewIcon2" />
 </LinearLayout>
