拔掉多餘的 id

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,14 @@
         android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BlankActivity"
         android:weightSum="1"
         android:orientation="vertical"
-        android:id="@+id/activity_main1"
         android:scrollbars="horizontal"
         android:focusable="true"
         android:focusableInTouchMode="true">
 
         <EditText
+            android:id="@+id/txt1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txt1"
             android:layout_gravity="center_horizontal"
             android:inputType="text"
             android:hint="請輸入任意字串..."/>
@@ -28,14 +27,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="提示測試"
-            android:id="@+id/textView3"/>
+            android:text="提示測試"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Toast測試"
-            android:id="@+id/btn_toast_show"
             android:onClick="showToast"
             android:layout_gravity="center_horizontal" />
 
@@ -43,7 +40,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="狀態列提示"
-            android:id="@+id/btn_notify"
             android:layout_gravity="center_horizontal"
             android:onClick="showNotify"/>
 
@@ -58,21 +54,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="SharedPreferences"
-                android:id="@+id/textView"/>
+                android:text="SharedPreferences"/>
 
             <TableRow>
                 <Button
                     android:layout_height="wrap_content"
                     android:text="測試寫入"
-                    android:id="@+id/button24"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
                     android:onClick="writeSharedPreferences"/>
                 <Button
                     android:layout_height="wrap_content"
                     android:text="測試讀取"
-                    android:id="@+id/button25"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
                     android:onClick="readSharedPreferences"/>
@@ -83,35 +76,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="檔案"
-            android:id="@+id/textView5"/>
+            android:text="檔案"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="測試寫入檔案"
-            android:id="@+id/btn_file_test"
             android:layout_gravity="center_horizontal"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Layout 測試"
-            android:id="@+id/textView2"/>
+            android:text="Layout 測試"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Linear Layout 測試"
-            android:id="@+id/btn_linear_start"
             android:onClick="showLinear"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Table Layout 測試"
-            android:id="@+id/btn_table"
             android:layout_gravity="center_horizontal"
             android:onClick="showTable" />
 
@@ -119,7 +107,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Relative Layout 測試"
-            android:id="@+id/btn_relative"
             android:layout_gravity="center_horizontal"
             android:onClick="showRelative" />
 
@@ -127,7 +114,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Fragment 測試"
-            android:id="@+id/button26"
             android:layout_gravity="center_horizontal"
             android:onClick="showFragment"/>
 
@@ -135,14 +121,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="元件測試"
-            android:id="@+id/textView4"/>
+            android:text="元件測試"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Image 測試"
-            android:id="@+id/button27"
             android:layout_gravity="center_horizontal"
             android:onClick="showImage"/>
 
@@ -155,7 +139,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ListView 測試"
-                android:id="@+id/button28"
                 android:onClick="showListView"
                 android:layout_weight="1" />
 
@@ -163,10 +146,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ListView 測試(圖示)"
-                android:id="@+id/button29"
-                android:onClick="showListViewIcon"
-                android:layout_weight="1" />
+                android:onClick="showListViewIcon"/>
         </TableRow>
+
 
     </LinearLayout>
 
