--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -1,41 +1,45 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.leo_kuo.android_test.FragmentActivity"
-                android:orientation="vertical">
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent" >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    tools:context="com.leo_kuo.android_test.FragmentActivity"
+                    android:orientation="vertical">
 
-    <TextView
-        android:text="Fragment 測試"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_margin="5dp"/>
+        <TextView
+            android:text="Fragment 測試"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_margin="5dp"/>
 
-    <!-- fragment 自帶框線-->
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.leo_kuo.android_test.BlankFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"/>
-
-    <!-- 畫面上定義框線-->
-    <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:background="?android:attr/detailsElementBackground"
-    android:layout_margin="5dp">
+        <!-- fragment 自帶框線-->
         <fragment
+            android:id="@+id/fragment"
+            android:name="com.leo_kuo.android_test.BlankFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:name="com.leo_kuo.android_test.leoFragment"
-            android:id="@+id/fragment2"
-            android:layout_gravity="center_horizontal"/>
-    </FrameLayout>
-</LinearLayout>
+            android:layout_margin="5dp"/>
+
+        <!-- 畫面上定義框線-->
+        <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="?android:attr/detailsElementBackground"
+        android:layout_margin="5dp">
+            <fragment
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="com.leo_kuo.android_test.leoFragment"
+                android:id="@+id/fragment2"
+                android:layout_gravity="center_horizontal"/>
+        </FrameLayout>
+    </LinearLayout>
+</ScrollView>
